--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,11 +1,16 @@
 ---
+title: 第5回 11/11 (水) 10:00〜12:00
+subtitle: グループワーク「自分のできることを見つける～企画と共有～」
+description: 行動に移すため具体的なプランを練ります。第6回までの２か月間で「自分のできること」を実践しよう！
+
 layout: default
 modal-id: 5
 date: 2014-07-14
-img: safe.png
-alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+img: dai5kai.png
+
+facilitator: 佐藤倫子
+facilitator-yomigana: さとうみちこ
+facilitator-img: sato.jpg
+facilitator-title: 福岡教育大学・西南学院大学　非常勤講師、（一社）ママトコラボ理事
+facilitator-bio: 青年海外協力隊やJALEXプログラムで日本語教師を経験し、現在は大学でボランティア実践入門や国際福祉論を担当。ファシリテーターとしては自治体の依頼等で会議進行や人材育成研修に従事している。糸島市多文化共生計画審議委員もつとめた。
 ---
