--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,11 +1,21 @@
 ---
+title: 第4回 11/4 (水) 10:00〜12:00
+subtitle: 講演「広川町民発！みんなで楽しむ、まちづくり、人づくり」<br>グループワーク「自分のできることを見つける～テーマの設定～」
+
 layout: default
 modal-id: 4
 date: 2014-07-15
-img: game.png
-alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+img: dai4kai.png
+
+speaker: 塩澄文子
+speaker-yomigana: しおずみふみこ
+speaker-img: shiozumi.jpg
+speaker-title: 広川町国際交流協会発起人
+speaker-bio: 一般市民の立場から、地元広川町で多文化共生の必要性を感じ、国際交流協会を設立。｢子どもたちにグローバルな感覚を｣と願い、留学生との交流やホームステイの受け入れ支援、イベントの企画運営などを行っている。
+
+facilitator: 佐藤倫子
+facilitator-yomigana: さとうみちこ
+facilitator-img: sato.jpg
+facilitator-title: 福岡教育大学・西南学院大学　非常勤講師、（一社）ママトコラボ理事
+facilitator-bio: 青年海外協力隊やJALEXプログラムで日本語教師を経験し、現在は大学でボランティア実践入門や国際福祉論を担当。ファシリテーターとしては自治体の依頼等で会議進行や人材育成研修に従事している。糸島市多文化共生計画審議委員もつとめた。
 ---
