--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,11 +1,13 @@
 ---
+title: 第3回 10/21 (水) 10:00〜12:00
+subtitle: ゲストと座談会「糸島在住外国人と一緒に話そう」
+description: ゲストと共に、自分たちの暮らしてきた地域や今の暮らしについて、小グループに分かれて語り合います。
+
 layout: default
 modal-id: 3
 date: 2014-07-16
-img: circus.png
-alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+img: dai3kai.png
+
+sweets: true
+
 ---
