--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,6 +1,7 @@
 ---
 title: 第6回 1/20 (水) 10:00〜12:00
 subtitle: 報告会「それぞれの多文化共生の取り組み」
+description: 2か月間で実践したことを報告し合います。
 
 layout: default
 modal-id: 6
