Bonus: fixed punctuation on description for part 2 according to the flyer PDF

--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,7 +1,7 @@
 ---
 title: 第2回 10/14 (水) 10:00〜12:00
 subtitle: 講演「なんで多文化の共生が必要なの？」<br>ワークショップ「やさしい日本語」
-description: 実例や心構えを聞き、外国人と話せる魔法の言葉「やさしい日本語」を体験しよう
+description: 実例や心構えを聞き、外国人と話せる魔法の言葉「やさしい日本語」を体験しよう。
 
 layout: default
 modal-id: 2
